--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.0",
-    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-image-picker": "~10.1.4",
+    "expo-location": "~12.0.4",
     "expo-status-bar": "~1.0.4",
+    "geolib": "^3.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
-    "react-native-dropdown-picker": "^5.0.0",
+    "react-native-actions-sheet": "^0.4.8",
+    "react-native-dropdown-picker": "^5.1.13",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-maps": "0.28.0",
+    "react-native-maps": "0.27.1",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-numeric-input": "^1.9.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
