--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
