--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-image-picker": "~10.1.4",
     "expo-location": "~12.0.4",
     "expo-status-bar": "~1.0.4",
+    "form-data": "^4.0.0",
     "geolib": "^3.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
