--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-actions-sheet": "^0.4.8",
     "react-native-dropdown-picker": "^5.1.13",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.27.1",
     "react-native-material-textfield": "^0.16.1",
